<resources>
    <string name="app_name">WordBomb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_id">Game ID</string>
    <string name="game_nickname">Nickname</string>
    <string name="title_activity_game">game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">Nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login"><u>already have an account?\n</u>Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="title_activity_profile_drawer">ProfileDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_room">create room</string>
    <string name="room_size">Room Size</string>
    <string name="start">Start</string>
    <string name="amount_of_players">Amount of players</string>
    <string name="amount_of_hp">Amount of HP</string>
    <string name="hp">HP</string>
    <string name="mail">Mail</string>
    <string name="new_password">New Password</string>
    <string name="savechanges">Save changes</string>
    <string name="don_t_have_and_account_register">Don\'t have and account?\n<u>Register</u></string>
    <string name="enter_to_existing_room">enter to existing room</string>
    <string name="log_out">Log out</string>
</resources>