<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle_background_faded_light_orange"
    android:theme="@style/Theme.WordBomb"
    tools:context=".RegistrationFragment">

    <TextView
        android:id="@+id/profile_nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_nickname_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/profile_nickname_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/name"
        android:background="@drawable/rounded_rectangle_background_white"
        app:layout_constraintBottom_toTopOf="@+id/profile_email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_nickname_text" />

    <TextView
        android:id="@+id/profile_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24sp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_nickname_edit_text" />

    <EditText
        android:id="@+id/profile_email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/coming_soon_regular"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email"
        android:background="@drawable/rounded_rectangle_background_white"
        app:layout_constraintBottom_toTopOf="@+id/profile_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_text" />

    <TextView
        android:id="@+id/profile_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="24sp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_edit_text" />

    <EditText
        android:id="@+id/profile_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:background="@drawable/rounded_rectangle_background_white"
        app:layout_constraintBottom_toTopOf="@+id/profile_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password_text" />

    <Button
        android:id="@+id/profile_register_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_rectangle_background_black"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password_edit_text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_rectangle_background_black"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_register_button"
        app:layout_constraintBottom_toTopOf="@id/redirect_to_login_page_text">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_google_logo" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sign_in_with_google" />
    </LinearLayout>

    <TextView
        android:id="@+id/redirect_to_login_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/dark_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>